[gd_scene load_steps=11 format=2]

[ext_resource path="res://Sprites/Doc/NaMSignal/frame_2_delay-0.33s.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Doc/NaMSignal/frame_4_delay-0.33s.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Doc/NaMSignal/frame_3_delay-0.33s.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Doc/NaMSignal/frame_0_delay-0.33s.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Doc/NaMSignal/frame_1_delay-0.33s.png" type="Texture" id=5]
[ext_resource path="res://Scripts/Attacks/Doc/NaMSignal.gd" type="Script" id=6]
[ext_resource path="res://Scenes/ObjectScenes/Stats.tscn" type="PackedScene" id=7]
[ext_resource path="res://UI/TitleFont.tres" type="DynamicFont" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 1 ), ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 60.2261

[node name="NaMSignal" type="StaticBody2D"]
collision_layer = 8
collision_mask = 6
script = ExtResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 1.90735e-06, 1.90735e-06 )
scale = Vector2( 1.46028, 1.46028 )
frames = SubResource( 1 )
animation = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 43.5728 )
shape = SubResource( 2 )

[node name="Stats" parent="." instance=ExtResource( 7 )]
max_health = 3
invulnerable_time = 0.2

[node name="LineOfSight" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="LineOfSight"]
visible = false
polygon = PoolVector2Array( 0, 100, 700, -1200, -700, -1200 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 82.0
margin_top = 187.0
margin_right = 238.0
margin_bottom = 329.0
rect_rotation = 180.0
custom_fonts/normal_font = ExtResource( 8 )
text = "5G"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="body_entered" from="LineOfSight" to="." method="player_in_sight"]
[connection signal="body_exited" from="LineOfSight" to="." method="player_out_of_sight"]
